--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -14,7 +14,7 @@
 # ============================================
 
 # ===== Interface Graphique =====
-PySide6>=6.5.0
+PySide6-Essentials>=6.5.0
 
 # ===== Traitement d'Images =====
 opencv-python>=4.8.0
